Fix core naming scheme in linuxcpuplugin.cpp

This attempts to fix the way CPU core names are generated on systems with more than one physical CPU ("physical id" \> 0 in /proc/cpuinfo). The previous code would often result in negative core indices due to the way it subtracted an accumulated processor sibling count from the current processor ID. I believe the original code assumed that all cores that belonged to a specific physical ID would be listed contiguously in /proc/cpuinfo; however this is often not the case (it varies largely based on the layout of the underlying hardware). On my Z10PA-D8 based system, for example, the /proc/cpuinfo core layout is roughly as follows:

* processor 0, physical core 0 to 13
* processor 1, physical core 14 to 27
* processor 0, virtual (HT) core 28 to 41
* processor 1, virtual (HT) core 42 to 55

When the physical ID changed (info.cpu in this case), previousCpuSiblings would get incremented by the current core's sibling count (which is 28 my E5-2690v4 chips). This would result in the CPU indices getting pushed into the negative after the first 13 cores, resulting in some wonky core naming in applications like System Monitor.

This patch attempts to fix that by keeping track of the current core on a per-processor basis instead. A simple QVector is used to keep track of the current core index for any given physical ID and bumped for every core encountered. This results in the expected CPU naming scheme (ie, "CPU 1 Core 1" through to "CPU 1 Core 28"). Technically this doesn't handle holes that might occur from offline processors, but figuring that out from /proc/cpuinfo alone is not very trivial with multiple chips and it's just a minor aesthetic issue in the end.

BUG: 515435